Bugfix: wrong padding in the '1024' space range

--- a/public/styles/home/home.css
+++ b/public/styles/home/home.css
@@ -80,7 +80,7 @@
 }
 
 .media-body {
-    padding: 20px 30px 10px 35px;
+    padding: 10px 20px 5px 25px;
 }
 
 .media div.pull-left {
